// ==========================================
// MICROSERVICE 1: DJANGO DB (Users, Auth, Social)
// ==========================================

TableGroup Django_Microservice {
  Users
  Profiles
  User_Friends
  SocialAccounts
}

Table Users {
  id integer [primary key]
  username varchar [unique]
  email varchar [unique, note: 'Used for JWT Login']
  password varchar
  oauth_provider varchar [note: 'e.g., github']
  oauth_id varchar
  is_bot boolean [default: false]
  date_joined timestamp
}

Table Profiles {
  id integer [primary key]
  user_id integer [unique, note: 'Strict Foreign Key']
  avatar varchar [note: 'Local file upload path']
  oauth_avatar_url varchar [note: 'External GitHub URL']
  location varchar [default: "Warschau"]
  bio text
  
  // Stats
  elo_rating integer [default: 1200]
  peak_rating integer [default: 1200]
  total_games integer [default: 0]
  wins integer [default: 0]
  losses integer [default: 0]
  draws integer [default: 0]
  current_streak integer [default: 0]
}

Table User_Friends {
  id integer [primary key]
  from_user_id integer
  to_user_id integer
  note: 'Hidden Junction Table generated by Django ManyToManyField'
}

Table SocialAccounts {
  id integer [primary key]
  user_id integer
  provider varchar [note: 'github']
  uid varchar [note: 'GitHub User ID']
  extra_data json
  note: 'Auto-generated by django-allauth'
}


// Strict Django Relations (Hard SQL Foreign Keys)
Ref: Profiles.user_id - Users.id
Ref: User_Friends.from_user_id > Users.id
Ref: User_Friends.to_user_id > Users.id
Ref: SocialAccounts.user_id > Users.id


// ==========================================
// MICROSERVICE 2: FASTAPI DB (Matchmaking & Games)
// ==========================================

TableGroup FastAPI_Microservice {
  Tournaments
  TournamentParticipants
  TournamentMatches
  Games
}

Table Tournaments {
  id integer [primary key]
  creator_id integer [note: 'SOFT LINK to Django Users.id']
  size integer [default: 8]
  status varchar [default: 'waiting']
  winner_id integer [null, note: 'SOFT LINK to Django Users.id']
  created_at timestamp
}

Table TournamentParticipants {
  id integer [primary key]
  tournament_id integer
  player_id integer [note: 'SOFT LINK to Django Users.id']
  bracket_position integer
}

Table TournamentMatches {
  id integer [primary key]
  tournament_id integer
  round_number integer
  player1 integer [null, note: 'SOFT LINK']
  player2 integer [null, note: 'SOFT LINK']
  winner integer [null, note: 'SOFT LINK']
  game_id integer [null]
}

Table Games {
  id integer [primary key]
  white_player_id integer [note: 'SOFT LINK']
  black_player_id integer [null, note: 'SOFT LINK']
  tournament_id integer [null]
  tournament_match_id integer [null]
  is_local_1v1 boolean [default: false]
  status varchar [default: 'ongoing']
  winner_id integer [null, note: 'SOFT LINK']
  is_draw boolean [default: false]
  moves_pgn text
  played_at timestamp
}

// Strict FastAPI Relations (Hard SQL Foreign Keys)
Ref: TournamentParticipants.tournament_id > Tournaments.id
Ref: TournamentMatches.tournament_id > Tournaments.id
Ref: TournamentMatches.game_id - Games.id
Ref: Games.tournament_id > Tournaments.id
Ref: Games.tournament_match_id > TournamentMatches.id

// ==========================================
// THE MICROSERVICE BOUNDARY (Soft Links)
// ==========================================
Ref: Tournaments.creator_id > Users.id
Ref: Games.white_player_id > Users.id
Ref: Games.black_player_id > Users.id